--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <div> Cuarta linea del div</div>
     <div> Quinta linea del div</div>
     <div> Sexta linea del div</div>
+    <div> Septima linea del div</div>
+    <div> Octava linea del div</div>
 </body>
 </html>
