--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <div> Decimaa linea del div</div>
     <div> Decimaa linea del div</div>
     <div> Septima linea del div</div>
-    
+    <div> Septima linea del div</div>
 </body>
 </html>
