--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <div> Septima linea del div</div>
     <div> Septima linea del div</div>
     <div> Septima linea del div</div>
+    <div> Septima linea del div</div>
+    <div> Primera linea del div</div>
 </body>
 </html>
