Estadio Junior Commit

--- a/index.html
+++ b/index.html
@@ -6,24 +6,7 @@
     <title>MI PRIMERA PAGINA WEB</title>
 </head>
 <body>
-    <div> Primera linea del div</div>
-    <div> Segunda linea del div</div>
-    <div> Tercera linea del div</div>
-    <div> Cuarta linea del div</div>
-    <div> Quinta linea del div</div>
-    <div> Sexta linea del div</div>
-    <div> Septima linea del div</div>
-    <div> Octava linea del div</div>
-    <div> Novena linea del div</div>
-    <div> Decimaa linea del div</div>
-    <div> Decimaa linea del div</div>
-    <div> Septima linea del div</div>
-    <div> Septima linea del div</div>
-    <div> Septima linea del div</div>
-    <div> Septima linea del div</div>
-    <div> Primera linea del div</div>
-    <div> Primera linea del div</div>
-    <div> Primera linea del div</div>
-    <div> Primera linea del div</div>
+    <div><img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Estadio_Metropolitano_baq.jpg" width="1000" height="1000"></div>
+    
 </body>
 </html>
